Fixed font size on mobile contact view

--- a/css/contact-styles.css
+++ b/css/contact-styles.css
@@ -73,6 +73,9 @@ footer img {
 .menu-scrap hr {
     background-color: black;
 }
+.menu-scrap a {
+    font-size: 4vw;
+}
 
 .side-by-side {
     margin-top: 12vh;
